Dodanie tytulow do stron i poprawa nawigacji

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Szablon Bootstrapa</title>
+  <title>Galeria - Absolwent Collegium Gostomianum</title>
 
   <!-- Czcionki -->
   <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
@@ -65,13 +65,14 @@
 <!-- Nagłówek strony: menu, logo, breadcrumbs itp. -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top navbackground p-2">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <img class="" src="img/logo.png" width="80" height="80">
     </a>
     <div class="text-center logpadding">
-      <p class="">
-        <a href="#" class="textsize textpadding fonttype">Collegium Gostomianum</a><br>
-        <a href="#" class="abscolor fonttype abssize flt">Absolwent</a>
+      <p>
+        <span class="textsize textpadding fonttype">Collegium Gostomianum</span>
+        <br>
+        <span class="abscolor fonttype abssize flt">Absolwent</span>
       </p>
     </div>
 
@@ -85,7 +86,7 @@
           <a class="nav-link text-white" href="index.html#news">Wydarzenia</a>
         </li>
         <li class="nav-item liborderone navpadding navhover">
-          <a class="nav-link text-white" href="index.html#footbar">Kontakt</a>
+          <a class="nav-link text-white" href="#footbar">Kontakt</a>
         </li>
         <li class="nav-item liborderthree navpadding navhover">
           <a class="nav-link text-white" href="login.html">Zaloguj się</a>
@@ -253,6 +254,11 @@
 <!-- Bootstrap JavaScript and Popper JS (https://popper.js.org) -->
 <script src="js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
+<!--jQuery Easing-->
+<script src="js/jquery.easing.min.js"></script>
+<!-- Skrypty -->
+<script src="js/script.js"></script>
+
 
 </body>
 </html>
