--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Szablon Bootstrapa</title>
+  <title>Logowanie - Absolwent Collegium Gostomianum</title>
 
   <!-- Czcionki -->
   <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
@@ -60,13 +60,14 @@
 <!-- Nagłówek strony: menu, logo, breadcrumbs itp. -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top navbackground p-2">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <img class="" src="img/logo.png" width="80" height="80">                      
     </a>
     <div class="text-center logpadding">
-      <p class="">
-        <a href="#" class="textsize textpadding fonttype">Collegium Gostomianum</a><br>
-        <a href="#" class="abscolor fonttype abssize flt">Absolwent</a>
+      <p>
+        <span class="textsize textpadding fonttype">Collegium Gostomianum</span>
+        <br>
+        <span class="abscolor fonttype abssize flt">Absolwent</span>
       </p>
     </div>
       
