Dodanie strony z ankieta, poprawienie bledow w kodzie CSS

--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@
         <a class="nav-link secondafont libordertwo" href="#">Dokumenty</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link secondafont liborderone" href="#">Archiwum</a>
+        <a class="nav-link secondafont libordertwo" href="#">Archiwum</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link secondafont liborderone" href="poll.html">Ankieta</a>
       </li>
     </ul>
   </div>
