--- a/poll.html
+++ b/poll.html
@@ -31,9 +31,6 @@
 
   <!-- twoje style -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
-
-
 </head>
 <body>
 
@@ -53,7 +50,6 @@
     e.src = "http://browser-update.org/update.min.js";
     document.body.appendChild(e);
   }
-
   try {
     document.addEventListener("DOMContentLoaded", $buo_f, false)
   }
@@ -126,136 +122,94 @@
   </div>
 </div>
 
-<div class="container text-center">
-  <h1 class="p-5">Galeria Collegium Gostomianum</h1>
-</div>
+<!-- Treść główna -->
 
-<div class="container-fluid mx-4 p-5">
-
-  <div class="container text-center">
-    <h2 class="mb-5">← 2018 →</h2>
-  </div>
-
-  <div class="d-flex flex-row justify-content-center flex-wrap">
-    <div class="p-3">
-      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="p-3">
-      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="p-3">
-      <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-  </div>
-
-  <div class="container text-center">
-    <h2 class="mb-5">← 2017 →</h2>
-  </div>
-
-  <div class="d-flex flex-row justify-content-center flex-wrap">
-    <div class="p-3">
-      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg4.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="p-3">
-      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg5.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="p-3">
-      <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg6.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-  </div>
-
-  <div class="container text-center">
-    <h2 class="mb-5">← 2016 →</h2>
-  </div>
-
-  <div class="d-flex flex-row justify-content-center flex-wrap">
-    <div class="p-3">
-      <a href="img/cg1.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg1.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="p-3">
-      <a href="img/cg2.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg2.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-    <div class="p-3">
-      <a href="img/cg3.jpg" data-lightbox="mygallery"><img class="galleryimg rounded" src="img/cg3.jpg" width="425"
-                                                           height="250"></a>
-    </div>
-  </div>
-
-</div>
-
-<!-- Stopka strony: copyrights, dodatkowe linki itp. -->
-<div class="container-fluid bg-dark" id="footbar">
-  <div class="container">
-    <div class="text-white bg-dark">
-      <div class="row">
-        <div class="p-5 col-md-4">
-          <i class="material-icons mb-3" style="font-size: 125px">school</i>
-          <h3 class="mb-4">Absolwent
-            <br>
-          </h3>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Strona główna</a></li>
-            <li><a href="#news" class="text-white">Wydarzenia</a></li>
-            <li><a href="#" class="text-white">Zaloguj się</a></li>
-          </ul>
-        </div>
-        <div class="p-5 col-md-8">
-          <h3>Chcesz być na bieżąco?</h3>
-          <form class="my-4">
-            <fieldset class="form-group">
-              Otrzymuj informacje o Collegium Gostomianum
-              <br>
-              <input type="email" class="form-control" placeholder="Podaj email"></fieldset>
-            <button type="submit" class="btn btn-outline-light">Wyślij</button>
-          </form>
-          <h3 class="mt-5">Kontakt
-            <br>
-          </h3>
-          <div class="col-12 my-3 px-0">
-            I Liceum Ogólnokształcące Collegium Gostomianum
-            <br>
-            ul. Jana Długosza 7
-            <br>
-            27-600 Sandomierz
-          </div>
-
-          <div class="row my-2 px-3">
-
-            <div class="col-lg-6 my-3 px-0">
-              <i class="fas fa-phone"></i>
-              <a href="tel:158325246" class="text-white">(15) 832-52-45</a>
-            </div>
-
-            <div class="col-lg-6 my-3 px-0">
-              <i class="fas fa-envelope"></i>
-              <a href="mailto:1losand@lo1.sandomierz.pl" class="text-white">1losand@lo1.sandomierz.pl</a>
-            </div>
-          </div>
-
-        </div>
+<div class="container survey">
+  <h1 class="surveyheading">Ankieta</h1>
+  <hr>
+  <form>
+    <div class="form-group">
+      <label>1. Czy wybór szkoły na przestrzeni lat uważasz za udany?</label>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question1" id="question1a" value="option1">
+        <label class="form-check-label" for="question1a">
+          Tak
+        </label>
       </div>
-      <div class="row">
-        <div class="col-md-12 mt-4">
-          <p class="text-center">© Copyright 2018 Wszelkie Prawa Zastrzeżone.</p>
-        </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question1" id="question1b" value="option2">
+        <label class="form-check-label" for="question1b">
+          Nie
+        </label>
       </div>
     </div>
-  </div>
+    <div class="form-group">
+      <label>2. Czy poleciłbyś/aś szkołę osobie bliskiej?</label>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question2" id="question2a" value="option1">
+        <label class="form-check-label" for="question2a">
+          Tak
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question2" id="question2b" value="option2">
+        <label class="form-check-label" for="question2b">
+          Nie
+        </label>
+      </div>
+    </div>
+    <div class="form-group">
+      <label>3. Czy kontynuowałeś/aś naukę w szkole wyższej?</label>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question3" id="question3a" value="option1">
+        <label class="form-check-label" for="question3a">
+          Tak
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question3" id="question3b" value="option2">
+        <label class="form-check-label" for="question3b">
+          Nie
+        </label>
+      </div>
+    </div>
+    <div class="form-group">
+      <label>4. Czy dostałeś/aś się na te studia, gdzie planowałeś/aś?</label>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question4" id="question4a" value="option1">
+        <label class="form-check-label" for="question4a">
+          Tak
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question4" id="question4b" value="option2">
+        <label class="form-check-label" for="question4b">
+          Nie
+        </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="question4" id="question4c" value="option2">
+        <label class="form-check-label" for="question4c">
+          Nie studiuję
+        </label>
+      </div>
+    </div>
+    <div class="form-group">
+      <label>5. Jeżeli na poprzednie pytanie odpowiedziałeś/aś "Tak" podaj nazwę uczelni na której studiujesz, jeżeli na "Nie" pozostaw puste pole.</label>
+      <input type="text" class="form-control" id="question5" placeholder="Nazwa uczelni">
+    </div>
+  </form>
+  <button class="btn btn-primary" type="submit">Wyślij</button>
+
+
 </div>
 
 <!-- jQuery library -->
 <script src="js/jquery-3.3.1.min.js"></script>
 <!-- Bootstrap JavaScript and Popper JS (https://popper.js.org) -->
 <script src="js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="js/lightbox-plus-jquery.min.js"></script>
+<!--jQuery script-->
+<script src="js/script.js"></script>
 
 </body>
 </html>
