--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top navbackground p-2">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img class="" src="img/logo.png" width="80" height="80">                      
+      <img class="" src="img/logo.png" width="80" height="80">
     </a>
     <div class="text-center logpadding">
       <p class="">
@@ -69,7 +69,7 @@
         <a href="#" class="abscolor fonttype abssize flt">Absolwent</a>
       </p>
     </div>
-      
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -112,7 +112,10 @@
         <a class="nav-link secondafont libordertwo" href="#">Dokumenty</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link secondafont liborderone" href="#">Archiwum</a>
+        <a class="nav-link secondafont libordertwo" href="#">Archiwum</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link secondafont liborderone" href="poll.html">Ankieta</a>
       </li>
     </ul>
   </div>
