Poprawienie responsywnosci naglowka

--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
     </div>
     <div class="text-center logpadding">
       <p>
-        <span class="textsize textpadding fonttype">Collegium Gostomianum</span>
+        <span class="textsize fonttype">Collegium Gostomianum</span>
         <br>
         <span class="abscolor fonttype abssize flt">Absolwent</span>
       </p>
