--- a/poll.html
+++ b/poll.html
@@ -67,7 +67,8 @@
     </div>
     <div class="text-center logpadding">
       <p>
-        <span class="textsize textpadding fonttype">Collegium Gostomianum</span><br>
+        <span class="textsize fonttype">Collegium Gostomianum</span>
+        <br>
         <span class="abscolor fonttype abssize flt">Absolwent</span>
       </p>
     </div>
