--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </span>
     <div class="text-center logpadding">
       <p>
-        <span class="textsize textpadding fonttype">Collegium Gostomianum</span>
+        <span class="textsize fonttype">Collegium Gostomianum</span>
       <br>
         <span class="abscolor fonttype abssize flt">Absolwent</span>
       </p>
